cmake_minimum_required(VERSION 3.0)

project(algorithm_study)

# find_package(glfw3 CONFIG REQUIRED)
# find_package(glew REQUIRED)
# find_package(glm CONFIG REQUIRED)

# add_subdirectory(common)

# include_directories(
#     ${CMAKE_SOURCE_DIR}
#     )

# link_libraries(common)

add_subdirectory(01_diff)
# add_subdirectory(tutorial02_red_triangle)
